@startuml
class Business {
  - receiptId: int
  - orderId: int
  - name: String
  - products: Product[]
  + getProductById(int): Product
  + addProducts(Product[]): void
  + sellProducts(Customer, PurchasedProduct[]): Receipt
}
class Customer {
  - name: String
  + toString(): String
}
class Date {
  - day: int
  - month: int
  - year: int
  + toString(): String
}
class Main {
  + main(String[]): void
}
abstract class Product {
  - name: String
  - price: double
  - stock: int
  + getPrice(): double
  + reduceStock(int): int
  + toString(): String
  + getVAT(): double
}
class ProductWithIVA {
  + VAT_PERCENTAGE: double
  - vat: double
  - setVat(): double
  + getVAT(): double
}
class ProductWithoutIVA {
  + getVAT(): double
}
class PurchasedProduct {
  - product: Product
  - amount: int
  - cost: double
  + getVAT(): double
  + getCost(): double
  + toString(): String
}
class Receipt {
  - receiptDate: Date
  - receiptId: int
  - total: double
  + TAX_PERCENTAGE: double
  - vat: double
  - discount: int
  - businessName: String
  - subtotal: double
  - customer: Customer
  - purchasedProducts: PurchasedProduct[]
  + toString(): String
  - setSubtotalAndVAT(): void
  - getDiscount(): int
}

ProductWithIVA     --|>  Product
ProductWithoutIVA  --|>  Product
@enduml